namespace Ladeskab_biblio.Display;

public interface IDisplay
{
    public void SetChargingText(string chargingText);


}