namespace Cabinet_Library.ChargeControl.States;

public enum StateID
{
    READY,
    FULLY_CHARGED,
    CHARGING,
    ERROR
}